; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send.c_yrmcds_replace_unlock.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send.c_yrmcds_replace_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@YRMCDS_NOT_IMPLEMENTED = common dso_local global i32 0, align 4
@YRMCDS_CMD_RAUQ = common dso_local global i32 0, align 4
@YRMCDS_CMD_RAU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yrmcds_replace_unlock(%struct.TYPE_4__* %0, i8* %1, i64 %2, i8* %3, i64 %4, i32 %5, i32 %6, i32 %7, i32* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_4__*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %11, align 8
  store i8* %1, i8** %12, align 8
  store i64 %2, i64* %13, align 8
  store i8* %3, i8** %14, align 8
  store i64 %4, i64* %15, align 8
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32* %8, i32** %19, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %21 = icmp ne %struct.TYPE_4__* %20, null
  br i1 %21, label %22, label %29

22:                                               ; preds = %9
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* @YRMCDS_NOT_IMPLEMENTED, align 4
  store i32 %28, i32* %10, align 4
  br label %47

29:                                               ; preds = %22, %9
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %31 = load i32, i32* %18, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i32, i32* @YRMCDS_CMD_RAUQ, align 4
  br label %37

35:                                               ; preds = %29
  %36 = load i32, i32* @YRMCDS_CMD_RAU, align 4
  br label %37

37:                                               ; preds = %35, %33
  %38 = phi i32 [ %34, %33 ], [ %36, %35 ]
  %39 = load i8*, i8** %12, align 8
  %40 = load i64, i64* %13, align 8
  %41 = load i8*, i8** %14, align 8
  %42 = load i64, i64* %15, align 8
  %43 = load i32, i32* %16, align 4
  %44 = load i32, i32* %17, align 4
  %45 = load i32*, i32** %19, align 8
  %46 = call i32 @send_data(%struct.TYPE_4__* %30, i32 %38, i8* %39, i64 %40, i8* %41, i64 %42, i32 %43, i32 %44, i32 0, i32* %45)
  store i32 %46, i32* %10, align 4
  br label %47

47:                                               ; preds = %37, %27
  %48 = load i32, i32* %10, align 4
  ret i32 %48
}

declare dso_local i32 @send_data(%struct.TYPE_4__*, i32, i8*, i64, i8*, i64, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
